tests/ui/typech/return_value_inline_incomp.lm
fn foo() -> Int32 {
    return true;
}
